--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,4 +1,5 @@
 {
   "cssTheme": "Obsidian gruvbox",
-  "accentColor": "#ffc35c"
+  "accentColor": "#ffc35c",
+  "textFontFamily": "Cascadia Mono"
 }
