WIN-CLLM1LV26R1 2025-7-21:21:1:8

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -4,6 +4,6 @@
   "defaultViewMode": "source",
   "spellcheck": true,
   "newFileLocation": "folder",
-  "newFileFolderPath": "MainNet/1 - Main Notes",
-  "attachmentFolderPath": "MainNet/7. Assets"
+  "newFileFolderPath": "MainNet/1. Main Notes",
+  "attachmentFolderPath": "MainNet/6. Assets"
 }
