--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,5 +1,5 @@
 {
   "cssTheme": "Obsidian gruvbox",
-  "accentColor": "#ffc35d",
+  "accentColor": "#fec3f6",
   "textFontFamily": "Cascadia Mono"
 }
